# linzaapp

./: .gitignore  linza-admin-dashboard-update.html  linza-detector-design-system.css  linza-detector-liquid-glass (38).html  linza_admin_1.html  linza_editor_dashboard.html  linza_operator_panel_1.html
Linza-admin/: README.md
Linza-admin/lm-identity-api-develop/: .editorconfig  (+5 more)
Linza-debug/: CLAUDE.md  README.md
Linza-deploy/: .env.example  .gitignore  CLAUDE.md  README.md  build.sh  docker-compose.yml  export.sh  run.sh
Linza-storage-service/: CLAUDE.md  Dockerfile  README.md  requirements.txt
docs/: admin-guide-en.md  admin-guide-ru.md  user-guide-en.md  user-guide-ru.md
linza-analytics/: .env.example  CLAUDE.md  Dockerfile  README.md  requirements.txt
linza-board/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  devplan.md  docker-compose.services.yml  docker-compose.yml  index.html  package-lock.json  package.json  preview.html  requirements.txt  vite.config.js
linza-portal-api/: .gitignore
linza-vpleer/: CLAUDE.md  Dockerfile  README.md  devplan.md  requirements.txt
video-ai-filter/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
video-ai-filter/app/: __init__.py  audio_moderation.py  audio_whisper.py  config.py  effective_settings.py  export_util.py  inference.py  job_categories.py  linza_taxonomy.py  main.py  pdf_report.py  prompt_api.py  prompt_builder.py  storage.py  time_report.py  video_normalize.py  worker.py
video-ai-filter/static/: index.html
(+1550 files in other folders)
